tests/sksl/errors/ReturnFromVoid.dsl.glsl
### Compilation failed:

error: may not return a value from a void function

1 error
